--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -74,4 +74,13 @@
     </div>
   </article>
 
+  <app-meu-form></app-meu-form>
+
+  <article>
+    <h3>Input/Output properties</h3>
+    <div>
+        <app-curso [nome]="nomeDoCurso"></app-curso>
+    </div>
+  </article>
+
 </section>
