ciclo de vida do componente

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
 <app-data-binding></app-data-binding>
+<hr>
+<app-ciclo [valor]="valorCiclo" *ngIf="!isDestroiValor"></app-ciclo>
+<button (click)="mudarValorCiclo()">Mudar Valor</button>
+<button (click)="onDestruir()">Destruir Valor</button>
